# -Partial-Differential-Equation-PDE-Solver

./: .gitignore  CLEAN_CODE_SUMMARY.md  FINAL_INTEGRATION_REPORT.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_SUMMARY.md  LIVE_TRADING_GUIDE.md  NIFTY FINANCIAL SERVICES-25-11-2024-to-25-11-2025.csv  PRICING_MODEL.md  QUICK_REFERENCE.md  README.md  backtest_results.csv  coin_Bitcoin.csv  coin_Dogecoin.csv  coin_Solana.csv  coin_Tether.csv  dune-project  package.json  start_live_feed.sh  test_comprehensive.sh
_build/: .db  .digest-db  log
_build/default/: LICENSE  META.pde_opt  pde_opt.dune-package  pde_opt.install
_build/default/src/: api.mli  backtesting.ml  bcs.mli  bs_params.ml  calibration.ml  grid.ml  grid.mli  pde1d.ml  pde1d.mli  pde_opt.cma  pde_opt.cmxa  pde_opt.cmxs  pde_opt.ml-gen  time_stepper.ml  tridiag.ml  tridiag.mli
_build/default/src/.merlin-conf/: lib-pde_opt
_build/default/src/.pde_opt.objs/: pde_opt__Api.impl.all-deps  pde_opt__Api.impl.d  pde_opt__Api.intf.all-deps  pde_opt__Api.intf.d  pde_opt__Backtesting.impl.all-deps  pde_opt__Backtesting.impl.d  pde_opt__Backtesting.intf.d  (+25 more)
_build/default/test/: test_cli.ml  test_convergence.ml  test_edge_cases.ml  test_real_world.ml
ocaml-quant-dashboard/: README.md  start_backend.sh
ocaml-quant-dashboard/bridge/: package.json  simulate_live.js
ocaml-quant-dashboard/bridge/sample_data/: backtest_results.csv  greeks.csv  predictions.csv
ocaml-quant-dashboard/bridge/src/: csvParser.ts  index.ts  types.ts
ocaml-quant-dashboard/frontend/: README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vercel.json  vite.config.js
ocaml-quant-dashboard/frontend/src/: App.css  App.jsx  App.tsx  index.css
ocaml-quant-dashboard/sample_data/: backtest_results.csv  greeks.csv  predictions.csv
src/: api.ml  api.mli  backtesting.ml  backtesting.mli  bcs.ml  bcs.mli  bs_params.ml  bs_params.mli  calibration.ml  calibration.mli  crypto_analytics.ml  crypto_analytics.mli  crypto_model.ml  crypto_model.mli  dune  grid.ml  grid.mli  live_data.ml  live_data.mli  market_data.ml  market_data.mli  payoff.ml  payoff.mli  pde1d.ml  pde1d.mli  pricing.ml  pricing.mli  time_stepper.ml  time_stepper.mli  tridiag.ml  tridiag.mli
test/: TEST_SUMMARY.md  dune  run_tests.sh  test_cli.ml  test_edge_cases.ml  test_math.ml  test_params_grid.ml  test_pde_integration.ml  test_real_world.ml  test_smoke.ml
(+224 files in other folders)
