(executable
 (public_name test_smoke)
 (name test_smoke)
 (modules test_smoke)
 (libraries pde_opt))

(executable
 (public_name test_math)
 (name test_math)
 (modules test_math)
 (libraries pde_opt))

(executable
 (public_name test_pde_integration)
 (name test_pde_integration)
 (modules test_pde_integration)
 (libraries pde_opt))

(executable
 (public_name test_cli)
 (name test_cli)
 (modules test_cli)
 (libraries pde_opt unix))

(executable
 (public_name test_params_grid)
 (name test_params_grid)
 (modules test_params_grid)
 (libraries pde_opt))

(executable
 (public_name test_convergence)
 (name test_convergence)
 (modules test_convergence)
 (libraries pde_opt unix))

(executable
 (public_name test_edge_cases)
 (name test_edge_cases)
 (modules test_edge_cases)
 (libraries pde_opt unix))

(executable
 (public_name test_real_world)
 (name test_real_world)
 (modules test_real_world)
 (libraries pde_opt unix))

(rule
 (alias runtest)
 (action (run ./test_smoke.exe)))

(rule
 (alias runtest)
 (action (run ./test_math.exe)))

(rule
 (alias runtest)
 (action (run ./test_pde_integration.exe)))

(rule
 (alias runtest)
 (action (run ./test_cli.exe)))

(rule
 (alias runtest)
 (action (run ./test_params_grid.exe)))

(rule
 (alias runtest)
 (action (run ./test_convergence.exe)))

(rule
 (alias runtest)
 (action (run ./test_edge_cases.exe)))

(rule
 (alias runtest)
 (action (run ./test_real_world.exe)))